--- a/style.css
+++ b/style.css
@@ -2,11 +2,17 @@ section{
     display: inline;
    
 }
+h1{
+    text-align: center;
+}
+#rgb-color{
+    text-align: center;
+}
 #circulo1{
     margin-top: 250px;
     width: 30px;
     height: 30px;
-    margin-left: 400px;
+    margin-left: 430px;
     border-radius: 100%;
     border: 1px solid black;
 }
@@ -45,3 +51,7 @@ section{
     border-radius: 100%;
     border: 1px solid black;
 }
+body{
+    background-color: aqua;
+}
+
